# swagger/swagger.yaml
@@ -29,13 +29,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
     post:
-          summary: Add a book
-          operationId: addBooks
+          summary: create a book
+          operationId: createBook
           tags:
           - books
+          requestBody:
+            description: the book to create
+            required: true
+            content:
+              application/json:    
+                schema:
+                  $ref: "#/components/schemas/Book"
           responses:
             '201':
-              description: Add a book
+              description: OK
               content:
                 application/json:    
                   schema:
@@ -49,7 +56,15 @@ paths:
   /books/{bookId}:
     get:
           summary: Info on specific book
-          operationId: listBook
+          operationId: getBookById
+          parameters: 
+          - name: bookId
+            in: query
+            description: Book ID
+            required: true
+            schema:
+              type: string
+              format: int64
           tags:
           - books
           responses:
@@ -65,14 +80,100 @@ paths:
                 application/json:
                   schema:
                     $ref: "#/components/schemas/Error"
+    patch:
+          summary: Updating specific book
+          operationId: updateBook
+          parameters:
+          - name: bookId
+            in: path
+            description: Book ID
+            required: true
+            schema:
+              type: string
+              format: int64
+          tags:
+          - books
+          requestBody:
+            description: the book to create
+            required: true
+            content:
+              application/json:    
+                schema:
+                  $ref: "#/components/schemas/Book"
+          responses:
+            '201':
+              description: req.param upserted
+              content:
+                application/json:    
+                  schema:
+                    $ref: "#/components/schemas/ResponseBooks"
+            '200':
+              description: OK
+              content:
+                application/json:    
+                  schema:
+                    $ref: "#/components/schemas/ResponseBooks" 
+            '204':
+              description: No content
+              content:
+                application/json:    
+                  schema:
+                    $ref: "#/components/schemas/ResponseBooks"              
+            default:
+              description: unexpected error
+              content:
+                application/json:
+                  schema:
+                    $ref: "#/components/schemas/Error"
     delete:
           summary: Delete specific book
           operationId: deleteBook
+          parameters:
+          - name: bookId
+            in: path
+            description: Book ID
+            required: true
+            schema:
+              type: string
+              format: int64 
           tags:
           - books
           responses:
             '200':
-              description: Delete one book
+              description: deleted
+              content:
+                application/json:    
+                  schema:
+                    $ref: "#/components/schemas/ResponseBooks"
+            '204':
+                description: Cant find id
+                content:
+                  application/json:    
+                    schema:
+                      $ref: "#/components/schemas/Error"                 
+            default:
+              description: unexpected error
+              content:
+                application/json:
+                  schema:
+                    $ref: "#/components/schemas/Error"
+  /books/{bookAuthor}:
+    get:
+          summary: Info on specific book
+          operationId: getBookByAuthor
+          parameters: 
+          - name: Author
+            in: query
+            description: Book Author
+            required: true
+            schema:
+                type: string
+                format: int64
+          tags:
+          - books
+          responses:
+            '200':
+              description: Show one book
               content:
                 application/json:    
                   schema:
@@ -83,14 +184,23 @@ paths:
                 application/json:
                   schema:
                     $ref: "#/components/schemas/Error"
-                      patch:
-          summary: Updating specific book
-          operationId: updateBook
+  /books/{bookTitle}:
+    get:
+          summary: Info on specific book
+          operationId: getBookByTitle
+          parameters: 
+          - name: Title
+            in: query
+            description: Book Title
+            required: true
+            schema:
+                type: string
+                format: int64
           tags:
           - books
           responses:
             '200':
-              description: Update one book
+              description: Show one book
               content:
                 application/json:    
                   schema:
@@ -105,26 +215,40 @@ components:
   schemas:
     Book: # A single book
       type: object
-      required:
-        - id
-        - name
+      # allOf:
+      # - $ref: "#/components/schemas/Book"
       properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
+          ISBN:
+            type: string
+          Title:
+           type: string
+          Author:
+            type: string
+          Price:
+           type: integer
+          SellerEmail:
+           type: string
+          Used:
+           type: boolean
+          Location:
+           type: object
+           properties:
+            City:
+              type: string
+            Street:
+              type: string
 # Add properties for your books here   
     ResponseBook: #Single book response including _id and __v
+      type: object
       allOf:
       - $ref: "#/components/schemas/Book"
       - properties:
-          __v:
-            type: integer
-            format: uint32
           _id:
             type: string
             format: uuid
+          __v:
+            type: integer
+            format: uint32
     ResponseBooks: #list of books
       type: array
       items:
@@ -150,3 +274,4 @@ components:
             type:
               title: fault desciption
               type: string
+              $ref: "#/components/schemas/Error"
